// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSV Templator parse schema should parse data cell (Horizontal): _schema 1`] = `
Object {
  "logicColIndexes": Set {},
  "logicRowIndexes": Set {},
  "schemaTable": TableOperator {
    "_rawTable": Array [
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 0,
          },
          "eval": "'aaa'",
          "renderPosition": Object {
            "col": 0,
            "row": 0,
          },
          "type": 1,
        },
      ],
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 1,
          },
          "eval": "'bbb'",
          "renderPosition": Object {
            "col": 0,
            "row": 1,
          },
          "type": 1,
        },
      ],
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 2,
          },
          "eval": "'ccc'",
          "renderPosition": Object {
            "col": 0,
            "row": 2,
          },
          "type": 1,
        },
      ],
    ],
  },
}
`;

exports[`CSV Templator parse schema should parse data cell (Mixed): _schema 1`] = `
Object {
  "logicColIndexes": Set {},
  "logicRowIndexes": Set {},
  "schemaTable": TableOperator {
    "_rawTable": Array [
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 0,
          },
          "eval": "'aaa'",
          "renderPosition": Object {
            "col": 0,
            "row": 0,
          },
          "type": 1,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 0,
          },
          "eval": "'bbb'",
          "renderPosition": Object {
            "col": 1,
            "row": 0,
          },
          "type": 1,
        },
      ],
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 1,
          },
          "eval": "'ccc'",
          "renderPosition": Object {
            "col": 0,
            "row": 1,
          },
          "type": 1,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 1,
          },
          "eval": "'ddd'",
          "renderPosition": Object {
            "col": 1,
            "row": 1,
          },
          "type": 1,
        },
      ],
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 2,
          },
          "eval": "'eee'",
          "renderPosition": Object {
            "col": 0,
            "row": 2,
          },
          "type": 1,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 2,
          },
          "eval": "'fff'",
          "renderPosition": Object {
            "col": 1,
            "row": 2,
          },
          "type": 1,
        },
      ],
    ],
  },
}
`;

exports[`CSV Templator parse schema should parse data cell (Vertical): _schema 1`] = `
Object {
  "logicColIndexes": Set {},
  "logicRowIndexes": Set {},
  "schemaTable": TableOperator {
    "_rawTable": Array [
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 0,
          },
          "eval": "'aaa'",
          "renderPosition": Object {
            "col": 0,
            "row": 0,
          },
          "type": 1,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 0,
          },
          "eval": "'bbb'",
          "renderPosition": Object {
            "col": 1,
            "row": 0,
          },
          "type": 1,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 2,
            "row": 0,
          },
          "eval": "'ccc'",
          "renderPosition": Object {
            "col": 2,
            "row": 0,
          },
          "type": 1,
        },
      ],
    ],
  },
}
`;

exports[`CSV Templator parse schema should parse extend-col and extend-row: _schema 1`] = `
Object {
  "logicColIndexes": Set {
    0,
  },
  "logicRowIndexes": Set {
    0,
  },
  "schemaTable": TableOperator {
    "_rawTable": Array [
      Array [
        null,
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 0,
          },
          "logicType": 0,
          "loopArgs": Array [
            "item",
          ],
          "targetArrayPath": "list",
          "type": 0,
        },
      ],
      Array [
        null,
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 1,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 1,
            "row": 1,
          },
          "type": 1,
        },
      ],
      Array [
        null,
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 2,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 1,
            "row": 2,
          },
          "type": 1,
        },
      ],
      Array [
        null,
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 3,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 1,
            "row": 3,
          },
          "type": 1,
        },
      ],
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 4,
          },
          "logicType": 1,
          "loopArgs": Array [
            "item2",
          ],
          "targetArrayPath": "list",
          "type": 0,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 4,
          },
          "eval": "item2[item.name]",
          "renderPosition": Object {
            "col": 1,
            "row": 4,
          },
          "type": 1,
        },
      ],
    ],
  },
}
`;

exports[`CSV Templator parse schema should parse for-col: _schema 1`] = `
Object {
  "logicColIndexes": Set {},
  "logicRowIndexes": Set {
    0,
  },
  "schemaTable": TableOperator {
    "_rawTable": Array [
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 0,
          },
          "logicType": 0,
          "loopArgs": Array [
            "item",
          ],
          "targetArrayPath": "list",
          "type": 0,
        },
      ],
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 1,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 0,
            "row": 1,
          },
          "type": 1,
        },
      ],
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 2,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 0,
            "row": 2,
          },
          "type": 1,
        },
      ],
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 3,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 0,
            "row": 3,
          },
          "type": 1,
        },
      ],
    ],
  },
}
`;

exports[`CSV Templator parse schema should parse for-row: _schema 1`] = `
Object {
  "logicColIndexes": Set {
    0,
  },
  "logicRowIndexes": Set {},
  "schemaTable": TableOperator {
    "_rawTable": Array [
      Array [
        Object {
          "_positionInTemplate": Object {
            "col": 0,
            "row": 0,
          },
          "logicType": 1,
          "loopArgs": Array [
            "item",
          ],
          "targetArrayPath": "list",
          "type": 0,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 1,
            "row": 0,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 1,
            "row": 0,
          },
          "type": 1,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 2,
            "row": 0,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 2,
            "row": 0,
          },
          "type": 1,
        },
        Object {
          "_positionInTemplate": Object {
            "col": 3,
            "row": 0,
          },
          "eval": "item.name",
          "renderPosition": Object {
            "col": 3,
            "row": 0,
          },
          "type": 1,
        },
      ],
    ],
  },
}
`;

exports[`CSV Templator render output should successfully hide the column age: _rawValue 1`] = `
"null
name
Andrew
Joanne
Frank
"
`;

exports[`CSV Templator render output should successfully prepare data for render: _rawValue 1`] = `
"name,age
Andrew,30
Joanne,28
Frank,22
"
`;

exports[`CSV Templator render output should successfully render with numbers: _rawValue 1`] = `
"name,phone
Andrew,0930111111
null,0930222222
Joanne,0930333333
null,0930444444
Frank,0930555555
"
`;
